<resources>
    <string name="app_name">Adira Ektp</string>

    <string name="copyright">Copyright @ 2017</string>
    <string name="insertEktp">Please insert KTP card</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>


    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_max_login">Maximal User Login</string>
    <string name="summary_max_login">Specify Maximal user login</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">http://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">http://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">http://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_max_login">key_max_login</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>

    <!-- AlertDialog Update Available -->
    <string name="appverupdate_update_available">Available a new update!</string>
    <string name="appverupdater_content_update_available">Update %1$s mobile app to version %2$s</string>
    <string name="appverupdater_notes_update_available">Update %1$s mobile app to version %2$s \nFeatures: \n%3$s</string>
    <string name="appverupdater_positivetext_update_available">Update</string>
    <string name="appverupdater_negativetext_update_available">Later</string>
    <!-- AlertDialog Not Update Available -->
    <string name="appverupdate_not_update_available">No updates available!</string>
    <string name="appverupdater_content_not_update_available">You have the latest version of the application</string>
    <!-- ProgressDialog Update Available -->
    <string name="appverupdater_progressdialog_message_update_available">Download</string>
    <!-- AlertDialog Denied Permissin -->
    <string name="appverupdater_denied_message">If you reject permission,you can not use this service</string>

    <!-- Preference -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>


    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings_headers">Settings with Headers</string>
    <string name="infoDialog">Prepare read e-KTP ,Please wait ...</string>
</resources>
